networkpolicy/networkpolicy__basic_kafka_setup__cert-manager__all__cert-manager__ingress__ports__cert-manager__nr50__lines15.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager--all--cert-manager--ingress--ports--cert-manager--nr50
  namespace: cert-manager
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          stacktic.io/namespace: cert-manager
